# pydandas

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
readers/: pydantic_types.py  tabular_file.py
tests/: conftest.py  test_read_tabular_data.py
